# Chhavi

./: .gitignore  LICENSE  pyproject.toml  readme.md  requirements.txt
chhavi/: __init__.py  converter.py
examples/: example_usage.py
papers/: paper.bib  paper.md
profiles/: analyzing_profiles.py  compute_osyris_profile.py  compute_vtk_profile.py
ramses_outputs/sedov_3d/output_00001/: amr_00001.out00001  amr_00001.out00002  amr_00001.out00003  amr_00001.out00004  amr_00001.out00005  amr_00001.out00006  amr_00001.out00007  amr_00001.out00008  hydro_00001.out00001  hydro_00001.out00002  hydro_00001.out00003  hydro_00001.out00004  hydro_00001.out00005  hydro_00001.out00006  hydro_00001.out00007  hydro_00001.out00008  info_00001.txt  timer_00001.txt
ramses_outputs/sedov_3d/output_00002/: amr_00002.out00001  amr_00002.out00002  amr_00002.out00003  amr_00002.out00004  amr_00002.out00005  amr_00002.out00006  amr_00002.out00007  amr_00002.out00008  hydro_00002.out00001  hydro_00002.out00002  hydro_00002.out00003  hydro_00002.out00004  hydro_00002.out00005  hydro_00002.out00006  hydro_00002.out00007  hydro_00002.out00008  info_00002.txt  timer_00002.txt
ramses_outputs/sedov_3d/output_00003/: amr_00003.out00001  amr_00003.out00002  amr_00003.out00003  amr_00003.out00004  amr_00003.out00005  amr_00003.out00006  amr_00003.out00007  amr_00003.out00008  hydro_00003.out00001  hydro_00003.out00002  (+8 more)
tests/: test_profile_analysis.py
vtk_out/: sedov_test_00001.vtkhdf  sedov_test_00002.vtkhdf  sedov_test_00003.vtkhdf  sedov_test_00004.vtkhdf  sedov_test_00005.vtkhdf
(+56 files in other folders)
